[gd_scene load_steps=9 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Line_OuterBorder/GrayLine_3x3.png" type="Texture" id=2]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Line_InnerBorder_EnemyType/Line_EnemyTypeElite_6x6_Normal.png" type="Texture" id=3]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/ItemListEntryButton/Almanac_ItemListEntry_Button.gd" type="Script" id=4]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/MainMenu/TowerOption_MainMenu_Icon_40x40.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 6 )

[node name="Almanac_ItemListEntry_Button" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
script = ExtResource( 4 )

[node name="OuterLeftBorder" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="OuterRightBorder" type="TextureRect" parent="."]
margin_left = 61.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="OuterTopBorder" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="OuterBottomBorder" type="TextureRect" parent="."]
margin_top = 61.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="LeftBorder" type="TextureRect" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 9.0
margin_bottom = 61.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="MarginContainer"]
margin_left = 55.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="MarginContainer"]
margin_left = 3.0
margin_top = 55.0
margin_right = 61.0
margin_bottom = 61.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
mouse_filter = 2
custom_constants/margin_right = 9
custom_constants/margin_top = 9
custom_constants/margin_left = 9
custom_constants/margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="HeaderLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_left = 20.0
margin_right = 20.0
margin_bottom = 17.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Icon" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 5 )

[node name="TooltipBody" parent="MarginContainer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
visible = false
margin_top = 40.0
margin_bottom = 40.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="Button" parent="." instance=ExtResource( 1 )]
margin_right = 64.0
margin_bottom = 64.0
about_button_index_trigger = 2
define_tooltip_construction_in_button = false

[connection signal="visibility_changed" from="." to="." method="_on_Almanac_ItemListEntry_Button_visibility_changed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="released_mouse_event" from="Button" to="." method="_on_Button_released_mouse_event"]
